[package]
name = "waffy-rs"
version = "0.1.0"
authors = ["Kasper Seweryn <github@wvffle.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk-layer-shell-rs = { git = "https://github.com/subgraph/gtk-layer-shell-rs" }
gtk = { git = "https://github.com/gtk-rs/gtk.git" }
gdk = { git = "https://github.com/gtk-rs/gdk.git" }