[package]
name = "waffy"
version = "0.1.0"
authors = ["Kasper Seweryn <github@wvffle.net>"]
edition = "2018"

[dependencies]
dirs = "2.0.2"
json5 = "0.2.5"
rust-embed = "5.2.0"
serde = { version = "1.0.104", features = ["derive"] }
once_cell = "1.2.0"
sublime_fuzzy = "0.6.0"

# Github deps
gtk-layer-shell-rs = { git = "https://github.com/subgraph/gtk-layer-shell-rs" }
gtk = { git = "https://github.com/gtk-rs/gtk.git" }
gdk = { git = "https://github.com/gtk-rs/gdk.git" }
gdk-pixbuf = { git = "https://github.com/gtk-rs/gdk-pixbuf.git" }
gio = { git = "https://github.com/gtk-rs/gio.git" }
pango = { git = "https://github.com/gtk-rs/pango.git" }
